fullSandbox11072023/force-app/main/default/objects/ERP_Codes__c/ERP_Codes__c.object-meta.xml
<CustomObject>
    <label>Legacy Account Code</label>
    <nameField>
        <displayFormat>ERP-{0000000000}</displayFormat>
        <label>ERP Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Account Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>