fullSandbox11072023/force-app/main/default/objects/ERP_Codes__c/fields/ERP_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Code__c</fullName>
    <label>ERP Code</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>