fullSandbox11072023/force-app/main/default/objects/ERP_Codes__c/fields/ERP_System__c.field-meta.xml
<CustomField>
    <fullName>ERP_System__c</fullName>
    <label>ERP System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P21</fullName>
            </value>
            <value>
                <fullName>QAD</fullName>
            </value>
            <value>
                <fullName>Syspro</fullName>
            </value>
            <value>
                <fullName>LatAm QAD NA</fullName>
            </value>
            <value>
                <fullName>LatAm LMA</fullName>
            </value>
            <value>
                <fullName>UY</fullName>
            </value>
            <value>
                <fullName>MX QAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>