fullSandbox11072023/force-app/main/default/objects/ERP_Codes__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Account__r.BillingState</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>