fullSandbox11072023/force-app/main/default/objects/ERP_Codes__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>