fullSandbox11072023/force-app/main/default/objects/ERP_Codes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ERP_Code__c</columns>
    <columns>ERP_System__c</columns>
    <columns>Account__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>